     any diseqc use was broken in w_scan_cpp
* bump wirbelscan version to 2021.12.11
* CmdOpts.cpp, Lnb.cpp
   - commandline option '-l?' for printing LNB options was incomplete.
     Fixing it.
* bump version to 20211212

20230604:
-------------------------------------------------------------------------------
* fix FTBC on wirbelscan plugin -> bump wirbelscan version

20231015:
-------------------------------------------------------------------------------
* fix indent on w_scan XML output
* fix satip-server commandline option
* setting SAT>IP server quirk 0x08 now enables the use of RTP over TCP.
  This allows to use SAT>IP servers, which are not in the same network, if the
  server supports RTP over TCP. see option --satip-server and the README of
  vdr-plugin-satip.
  For example
  w_scan_cpp -fs --satip --satip-server '192.168.88.22:554|DVBS2-1|MySvr:0x08'
* add commandline option --satip-src
* add service_list.dtd to documentation
* fix on satip plugin
   * circumvent FritzBox DVB-C RTCP firmware bug
   * add missing brackets to allow src selection 
* bump wirbelscan plugin to 2023.10.15
   * use std::atomic<bool> for scanfilters instead of bool
   * move {active,isActive} to end of scanfilters Action()
   * early delete and set to nullptr any of the scanfilters
     in statemachine.cpp (less memory required)
   * detach aReceiver from dev, before deleting it

2023xxxx:
-------------------------------------------------------------------------------
* fix VLC output for Sat, VLC changed from MHz to Hz
* add fix for w_scan XML output from Christoph Heitkamp
* PrintVLC(), PrintXML(), PrintVLCsatip() now use XmlString() in texts
  to convert quotation mark, ampersand, apostrophe, less-than sign,
  greater-than sign to the five default XML char entities.
* prefer StrToInt and LeftFill/RightFill in output formats
* fix SRC parameter with VLC output for SAT>IP
* include all service pids in the VLC SAT>IP output