@@ -441,12 +441,6 @@ void PrintIni(std::vector<TChannel>& List) {
 
   std::stringstream ss;
   auto list = UniqueTransponders(List);
-  auto t = time(nullptr);
-  auto tm = localtime(&t);
-  auto year  = IntToStr(1900 + tm->tm_year, 4, false, '0');
-  auto month = IntToStr(1    + tm->tm_mon , 2, false, '0');
-  auto day   = IntToStr(0    + tm->tm_mday, 2, false, '0');
-
 
   auto SatId = [](std::string Source) -> std::string {
      std::string result;
@@ -461,9 +455,9 @@ void PrintIni(std::vector<TChannel>& List) {
   ss << "; file automatically generated by w_scan_cpp\n";
   ss << "; https://www.gen2vdr.de/wirbel/w_scan_cpp/index2.html\n";
   ss << ";------------------------------------------------------------------------------\n";
-  ss << "; location and provider: \n";
-  ss << "; date (yyyy-mm-dd)    : " + year + "-" + month + "-" + day + "\n";
-  ss << "; provided by (opt)    : --wirbel--\n\n";
+  ss << "; location and provider     : \n";
+  ss << "; date (dd.mm.yyyy HH:MM:SS): " << TimeStr(time(nullptr)) << "\n";
+  ss << "; provided by (opt)         : --wirbel--\n\n";
   ss << "[SATTYPE]" << std::endl;
 
   if (list[0].Source == "A") {
