@@ -189,3 +189,4 @@
 * prefer StrToInt and LeftFill/RightFill in output formats
 * fix SRC parameter with VLC output for SAT>IP
 * include all service pids in the VLC SAT>IP output
+* PrintIni(): replace localtime() by TimeStr()
